# cse167

./: BUILD.md  CMakeLists.txt  main.cpp
include/: Camera.h  DiffuseMaterial.h  FreeImage.h  Image.h  Intersection.h  MaterialBase.h  MirrorMaterial.h  ModelBase.h  Obj.h  PlatformGL.h  PrimSphere.h  PrimTriangle.h  PrimitiveBase.h  ProgressBar.h  RasterPreviewRenderer.h  Ray.h  RayTracer.h  Scene.h  ScenePreviewMesh.h  Screenshot.h  ShadingMode.h  Sphere.h  Square.h  Tetrahedron.h  Utility.h
src/: Camera.cpp  RasterPreviewRenderer.cpp  RayTracer.cpp  Scene.cpp  ScenePreviewMesh.cpp
src/materials/: DiffuseMaterial.cpp  MirrorMaterial.cpp
src/models/: Sphere.cpp  Square.cpp  Tetrahedron.cpp
src/primitives/: PrimSphere.cpp  PrimTriangle.cpp
src/scenes/: cornell_box.inl  open_sky.inl  sphere_in_box.inl  teapot_in_box.inl
